--- a/SiteFofoca/styleNoti.css
+++ b/SiteFofoca/styleNoti.css
@@ -239,24 +239,16 @@ nav a:hover {
 }
 /*Configurações Footer Juci - Brigadão Senhorita*/
 footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: #f3f3f3e0;
+  width: 100%;
   padding: 20px;
   list-style: none;
   margin: 10 auto;
-  width: 100%;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
-
 .footer {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
-
 .footer p {
   margin: 0;
   padding: 0;
@@ -270,6 +262,13 @@ footer {
 .footer img {
   height: 40px;
 }
+#footer_copyright {
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+  font-size: larger;
+  padding: 10px;
+}
 /*Formulario*/
 form {
   display: flex;
@@ -281,7 +280,7 @@ form {
   width: 50%;
   margin: auto;
 }
-.button{
+.button {
   width: 200px;
   align-items: center;
   margin: 60px;
