--- a/SiteFofoca/styleNoti.css
+++ b/SiteFofoca/styleNoti.css
@@ -332,4 +332,6 @@ select {
 .leiaMais{ /*Alguem ajuda a mudar essa droga? hahahahhahaha*/
   font-size: 20px;
   padding-bottom: 30px;
+  text-decoration: none; /* remove sublinhado */
+  color: rgb(255, 0, 0); /* altera a cor do texto */
 }
