--- a/SiteFofoca/styleNoti.css
+++ b/SiteFofoca/styleNoti.css
@@ -163,20 +163,21 @@ nav a:hover {
   margin: 10px 10px;
   font-size: 30px;
 }
-.fofocas h3{ /* acrescentei essa classe (Jucilene)*/
+.fofocas h3 {
+  /* acrescentei essa classe (Jucilene)*/
   color: black;
   font-size: 20px;
   text-align: justify;
   margin: 10px 10px;
   padding: 15px;
 }
-.fofocas p{ /* acrescentei essa classe (Jucilene)*/
+.fofocas p {
+  /* acrescentei essa classe (Jucilene)*/
 
   font-size: 20px;
   font-family: Inter, sans-serif;
   padding-top: 20px;
   line-height: 1.5;
-
 }
 .img-fofocas {
   width: 100%;
@@ -329,9 +330,85 @@ select {
     width: 100%;
   }
 }
-.leiaMais{ /*Alguem ajuda a mudar essa droga? hahahahhahaha*/
+.leiaMais {
+  /*Alguem ajuda a mudar essa droga? hahahahhahaha*/
   font-size: 20px;
   padding-bottom: 30px;
   text-decoration: none; /* remove sublinhado */
   color: rgb(255, 0, 0); /* altera a cor do texto */
+}
+/*Css do Slider - Cuidado pois está linkado com css*/
+.container {
+  position: relative;
+  padding: 15px;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.gallery-wrapper {
+  overflow-x: auto;
+}
+
+.arrow-left,
+.arrow-right {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: auto;
+  bottom: 0;
+  font-size: 20px;
+  line-height: 250px;
+  width: 40px;
+  color: #fff;
+  transition: all 600ms ease-in-out;
+  background: linear-gradient(to left, transparent 0%, black 200%);
+  opacity: 0.1;
+  cursor: pointer;
+  border: none;
+}
+
+.arrow-left:hover,
+.arrow-right:hover {
+  opacity: 1;
+}
+
+.arrow-right {
+  right: 0;
+  left: auto;
+  text-align: right;
+  background: linear-gradient(to right, transparent 0%, black 200%);
+}
+
+.gallery {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 15px;
+}
+
+.item {
+  width: 100%;
+  max-width: 800px;
+  height: 400px;
+  flex-shrink: 0;
+  transition: all 600ms ease-in-out;
+  opacity: 0.5;
+}
+
+.current-item {
+  opacity: 1;
+}
+
+/* This is from w3schools */
+/* 
+https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
+/* Hide scrollbar for Chrome, Safari and Opera */
+.gallery-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.gallery-wrapper {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
