--- a/SiteFofoca/styleNoti.css
+++ b/SiteFofoca/styleNoti.css
@@ -57,21 +57,6 @@ nav a:hover {
   font: size 50px;
 }
 
-@keyframes slide {
-  0% {
-    transform: translateX(0);
-  }
-  33.3% {
-    transform: translateX(-800px);
-  }
-  66.6% {
-    transform: translateX(-1600px);
-  }
-  0% {
-    transform: translateX(0);
-  }
-}
-
 .news {
   display: flex;
   justify-content: center;
@@ -88,15 +73,11 @@ nav a:hover {
 
 .card-container {
   display: flex;
-  justify-content: center; /* Centraliza os elementos horizontalmente */
-  align-items: center; /* Centraliza os elementos verticalmente */
-  flex-wrap: wrap; /* Quebra linha dos elementos quando não houver mais espaço */
+  flex-wrap: column; /* Quebra linha dos elementos quando não houver mais espaço */
 }
 
 .card {
-  float: left;
-  justify-content: space-between; /* Distribui o espaço entre os elementos internos */
-  width: 300px;
+  width: 250px;
   margin: 10px;
   border: 1px solid #e6e6e6;
   border-radius: 5px;
