--- a/SiteFofoca/styleNoti.css
+++ b/SiteFofoca/styleNoti.css
@@ -117,6 +117,7 @@ nav a:hover {
   color: white;
   text-decoration: none;
   border-radius: 5px;
+  margin-bottom: 80px;
 }
 
 /*Area de Fofocas - Alexandre */
